@@ -80,12 +80,12 @@ pod2usage("No distribution given.") unless scalar @ARGV;
 my @sources_list;
 
 my @preferences;
-push @preferences, "# BUBBA|TWO apt sources.list";
+push @preferences, "# Bubba apt sources.list";
 push @preferences, "#";
 push @preferences, "# Generated by $0 $old_args";
 push @preferences, "#";
 
-push @sources_list, "# BUBBA|TWO apt sources.list";
+push @sources_list, "# Bubba apt sources.list";
 push @sources_list, "#";
 push @sources_list, "# Generated by $0 $old_args";
 push @sources_list, "#";
@@ -133,8 +133,10 @@ foreach my $distribution ( @ARGV ) {
 move('/etc/apt/sources.list', '/etc/apt/sources.list.bkup') or die "couldn't move /etc/apt/sources.list: $!";
 write_file( '/etc/apt/sources.list', join "\n", @sources_list ) or die "couldn't write to /etc/apt/sources.list: $!";
 
-move('/etc/apt/preferences', '/etc/apt/preferences.bkup') or die "couldn't move /etc/apt/preferences: $!";
-write_file( '/etc/apt/preferences', join "\n", @preferences ) or die "couldn't write to /etc/apt/preferences: $!";
+# Don't write preferences for now. The distributed one should do.
+#
+#move('/etc/apt/preferences', '/etc/apt/preferences.bkup') or die "couldn't move /etc/apt/preferences: $!";
+#write_file( '/etc/apt/preferences', join "\n", @preferences ) or die "couldn't write to /etc/apt/preferences: $!";
 
 __END__
 
